--- a/src/pages/contacts/contacts.scss
+++ b/src/pages/contacts/contacts.scss
@@ -177,6 +177,12 @@
 			letter-spacing: -2px;
 			line-height: 34px;
 		}
+		.contactText .contactButtons p .char {
+			height: 37.8px;
+		}
+		.contactText .contactButtons .discription {
+			padding-top: 0;
+		}
 		.contactText .contactButtons .contactLight {
 			top: -154%;
 		}
@@ -185,10 +191,45 @@
 		}
 	}
 	@media screen and (max-width: 1024px) {
-        .w-full, .navigationSection{
+        .navigationSection{
 			display: none;
 		}
-        .sm{
+		.contactSection .contactText {
+			padding: 0 170px;
+		}
+	}
+	@media screen and (max-width: 768px) {
+		.contactText{
+			display: none;
+		}
+		h1 {
+			line-height: 116px;
+            position: relative;
+            margin-top: 136px;
+		}
+		.sm{
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            overflow: hidden;
+            width: -moz-available;
+            width: -webkit-fill-available;
+        }
+	}
+	@media screen and (max-width: 390px), (max-width: 375px), (max-width: 428px) {
+		// .contactSection{
+		// 	padding: 0 !important;
+		// }
+		.w-full {
+			display: none;
+		}
+		.firText , .secText {
+			letter-spacing: -4px;
+		}
+		.secText{
+			-webkit-text-stroke: 0.5px  #FAFAFA;
+		}
+		.sm{
             display: flex;
             justify-content: center;
             flex-direction: column;
@@ -206,30 +247,15 @@
             margin-top: 112px;
         }
         .sm h1:last-child{
-            margin-top: -16px;
+            margin-top: -46px;
         }
         .sm h1 .char {
             height: 96px !important;
         }
-		.contactSection .contactText {
-			padding: 0 170px;
-		}
 	}
-	@media screen and (max-width: 768px) {
-		.contactText{
-			display: none;
-		}
-	}
-	@media screen and (max-width: 390px), (max-width: 375px), (max-width: 428px) {
-		// .second{
-		// 	font-size: 56px;
-		// 	line-height: 50px;
-		// }
-		.firText , .secText {
-			letter-spacing: -4px;
-		}
-		.secText{
-			-webkit-text-stroke: 0.5px  #FAFAFA;
-		}
+}
+@media screen and (max-width: 390px), (max-width: 375px), (max-width: 428px) {
+	.contactSection{
+		padding: 0 !important;
 	}
 }
